# llm-gateway-python

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  models_list.html  models_list.json  pyproject.toml  run.local.py  sitemap.xml
.github/workflows/: deploy-docs.yml  model_list_updater.yml
docs/: index.md  models_list.html
example/: requirements.txt  sample.py
license/: index.html
llmgateway/: __init__.py  constants.py  helpers.py  ingest.py  models_list.json  utils.py
llmgateway/provider/: __init__.py  base.py  enum.py  factory.py  vectorstores.py
llmgateway/provider/huggingface/: factory.py
llmgateway/provider/litellm/: chat.py  embedding.py  factory.py  models_list.json
llmgateway/provider/ola_krutrim/: chat.py  factory.py  models_list.json
llmgateway/scripts/: ai_models_updater.py
search/: search_index.json
src/llmgateway/: __init__.py  base.py  chat.py  completion.py  constants.py  embeddings.py  helpers.py  image_generation.py  ingest.py  vector_store.py
src/llmgateway/provider/: __init__.py  enum.py  factory.py  huggingface.py  litellm.py  ola_krutrim.py
src/llmgateway/provider/data/: litellm_models_list.json  models_list.json
src/llmgateway/provider/huggingface/: chat.py  factory.py
src/llmgateway/provider/litellm/: embedding.py  factory.py  models_list.json
src/llmgateway/provider/ola_krutrim/: factory.py
src/llmgateway/scripts/: ai_models_updater.py
